fixed: removed large gaps for  sponsor carousel tech bro, added sponsor carousel to about us page

--- a/app/(pages)/(index-page)/_components/BottomSection/FAQ/FAQ.module.scss
+++ b/app/(pages)/(index-page)/_components/BottomSection/FAQ/FAQ.module.scss
@@ -95,7 +95,7 @@
       }
       
   }
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: 961px) {
     .container {
         width: 39%;
 
